--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,10 @@ jobs:
         python-version: 3.11
 
     - name: Install dependencies
-      run: pip install -r app/requirements.txt
+      run: flake
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
 
     - name: Run unit tests
       run: pytest app/tests/test_crud.py && pytest app/tests/test_questions.py
