forgot to add app

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,9 @@ jobs:
     - name: Start FastAPI Application
       run: uvicorn main:app --host 0.0.0.0 --port 8000 --reload &
 
-    - name: Wait for the application to start
-      run: sleep 10  # Adjust the sleep duration as needed
-
     - name: Run Integration Tests
       run: |
-            pytest tests/test_integration.py
+            pytest app/tests/test_integration.py
 
 
 
